<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="46dp"
        android:background="@android:color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="70dp"
                android:layout_height="16dp"
                android:layout_marginTop="16sp"
                android:src="@drawable/ic_academy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFirst"
                style="@style/TextViewMainBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:text="@string/tvf_first"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <TextView
                android:id="@+id/tvSecond"
                style="@style/TextViewMainBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing="0.01"
                android:text="@string/tv_second"
                android:textSize="10sp"
                app:layout_constraintTop_toBottomOf="@id/tvFirst"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tvThird"
                style="@style/TextViewMainBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_third"
                app:layout_constraintTop_toBottomOf="@id/tvSecond" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/bg_yellow_button"
        android:elevation="100dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/startToTest"
        android:textColor="@color/black_text"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/card" />

</androidx.constraintlayout.widget.ConstraintLayout>