<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        app:cardElevation="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserra"
                android:gravity="center"
                android:letterSpacing="0.01"
                android:text="6/6"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/monserat_medium"
                android:gravity="center"
                android:letterSpacing="0.01"
                android:text="@string/six_str"
                android:textColor="@color/black_lighter"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/tvCount" />

            <Button
                android:id="@+id/btnYes"
                android:layout_width="127dp"
                android:layout_height="36dp"
                android:layout_marginStart="12sp"
                android:layout_marginTop="156dp"
                android:background="@drawable/bg_red_button"
                android:fontFamily="@font/montserra"
                android:gravity="center"
                android:letterSpacing="0.02"
                android:text="@string/yes"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnNo"
                android:layout_width="127dp"
                android:layout_height="36dp"
                android:layout_marginTop="156dp"
                android:layout_marginEnd="12sp"
                android:background="@drawable/bg_green_button"
                android:fontFamily="@font/montserra"
                android:gravity="center"
                android:letterSpacing="0.02"
                android:text="@string/no"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>